--- a/login.html
+++ b/login.html
@@ -5,6 +5,25 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <header>
+        <a href="#" class="logo"><img src="./images/Logo.png" alt=""></a>
+        <div class="bx bx-menu" id="menu-icon"></div>   
+        <ul class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#ride">Ride</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+        </ul>
+        
+        <div id="sign-up" class="header-btn">
+            <a href="login.html" class="sign-up">Login</a>
+        </div>        
+        
+        <div id="sign-in" class="header-btn">
+            <a href="register.html" class="sign-in">Register</a>
+        </div>
+    </header>
     <div class="container">
         <div class="col-md-6 col-md-offset-3">
             <label style="color: red;"><span> <?php echo $error;  ?> </span></label>
@@ -12,7 +31,7 @@
                 <div class="panel-heading"> Login </div>
                 <div class="panel-body">
 
-                    <form action="" method="POST">
+                    <form action="" method="post">
 
                         <div class="row">
                             <div class="form-group col-xs-12">
