--- a/register.html
+++ b/register.html
@@ -5,6 +5,25 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <header>
+        <a href="#" class="logo"><img src="./images/Logo.png" alt=""></a>
+        <div class="bx bx-menu" id="menu-icon"></div>   
+        <ul class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#ride">Ride</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+        </ul>
+        
+        <div id="sign-up" class="header-btn">
+            <a href="login.html" class="sign-up">Login</a>
+        </div>        
+        
+        <div id="sign-in" class="header-btn">
+            <a href="register.html" class="sign-in">Register</a>
+        </div>
+    </header>
     <div class="container" style="margin-top: -2%; margin-bottom: 2%;">
         <div class="col-md-6 col-md-offset-3">
             <label style="color: red;"><span> <?php echo $error;  ?> </span></label>
@@ -12,31 +31,31 @@
                 <div class="panel-heading"> Register </div>
                 <div class="panel-body">
 
-                    <form action="" method="POST">
+                    <form action="register.php" method="POST">
 
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <label for="client_username"><span class="text-danger" style="margin-right: 5px;">*</span> Username: </label>
+                                <label for="username"><span class="text-danger" style="margin-right: 5px;">*</span> Username: </label>
                                 <div class="input-group">
-                                    <input class="form-control" id="client_username" type="text" name="client_username" placeholder="Username" required="" autofocus="">
+                                    <input class="form-control" id="username" type="text" name="username" placeholder="Username" required="" autofocus="">
                                 </div>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <label for="client_email"><span class="text-danger" style="margin-right: 5px;">*</span> Email: </label>
+                                <label for="email"><span class="text-danger" style="margin-right: 5px;">*</span> Email: </label>
                                 <div class="input-group">
-                                    <input class="form-control" id="client_email" type="email" name="client_email" placeholder="Email" required="">
+                                    <input class="form-control" id="email" type="email" name="email" placeholder="Email" required="">
                                 </div>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <label for="client_password"><span class="text-danger" style="margin-right: 5px;">*</span> Password: </label>
+                                <label for="password"><span class="text-danger" style="margin-right: 5px;">*</span> Password: </label>
                                 <div class="input-group">
-                                    <input class="form-control" id="client_password" type="password" name="client_password" placeholder="Password" required="">
+                                    <input class="form-control" id="password" type="password" name="password" placeholder="Password" required="">
                                 </div>
                             </div>
                         </div>
